backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mern-backend
      metadata: mern-backend
  template:
    metadata:
      labels:
        name: mern-backend
        metadata: mern-backend
    spec:
      containers:
      - name: mern-backend
        image: indraraspati/mern-backend:1.0
        ports:
        - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: mern-backend
  namespace: production
spec:
  #type: LoadBalancer
  ports:
    - port: 4000
      #nodePort: 30080
  selector:
          name: mern-backend
---
